--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
     "daisyui": "^3.9.2",
     "tailwindcss": "^3.3.3"
   }
